fix: code cleanup

--- a/src/components/Layout/SpaceLayout/Landing.module.less
+++ b/src/components/Layout/SpaceLayout/Landing.module.less
@@ -39,10 +39,8 @@
 
 .headerDivider {
   height: 34px;
-  margin: 0 16px
+  margin: 0 16px;
 }
-
-
 
 .footer {
   background-color: @soft-gray-color;
