--- a/src/pages/SpaceLandingPage/styles.module.less
+++ b/src/pages/SpaceLandingPage/styles.module.less
@@ -1,6 +1,6 @@
 @import '../../../src/styles/variables';
 .container {
-  background-image: linear-gradient(to top left, @primary-color, #A1C0A0);
+  background-image: linear-gradient(to top left, @primary-color, #a1c0a0);
 }
 
 .panels {
@@ -15,7 +15,6 @@
   height: calc(~'100vh - 64px - 2* 15px');
   pointer-events: none;
   max-height: 100%;
-
 }
 
 .panel {
@@ -58,7 +57,6 @@
 
   &.isEditingRequest {
     top: 125px;
-
   }
 
   &.isEditingChange {
