--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -86,19 +86,17 @@ textarea.ant-input {
 
 .ant-menu-item-selected {
   background-color: #def1d9 !important;
-  border-radius: 8px
+  border-radius: 8px;
 }
 
 .ant-select-item-option-selected:not(.ant-select-item-option-disabled) {
   background-color: #def1d9 !important;
 }
 
-
 .ant-menu-item .anticon {
   margin-right: 0px !important;
   min-width: auto !important;
 }
-
 
 label.ant-form-item-no-colon {
   font-weight: 600;
