--- a/src/styles/variables.less
+++ b/src/styles/variables.less
@@ -12,7 +12,7 @@
 @typography-title-font-weight: 800;
 @quote-card-background: #f9f9f9;
 
-@yellow-color: #FECE63;
-@red-color: #FD6F63;
+@yellow-color: #fece63;
+@red-color: #fd6f63;
 
-@primary-color: #2B6728;
+@primary-color: #2b6728;
