--- a/src/components/ChangesAndRequestsPanel/ActionList/styles.module.less
+++ b/src/components/ChangesAndRequestsPanel/ActionList/styles.module.less
@@ -5,10 +5,9 @@
 
   &.itemHeaderActive {
     font-weight: 800;
-
   }
 
   & a:not(:first-child) {
-    margin-left: 4px
+    margin-left: 4px;
   }
 }
