--- a/src/pages/CreateSpacePage/styles.module.less
+++ b/src/pages/CreateSpacePage/styles.module.less
@@ -3,10 +3,10 @@
   flex: 1;
   justify-content: center;
   align-items: center;
-  height: calc(~"100vh - 64px");
+  height: calc(~'100vh - 64px');
   flex-direction: column;
 
-  background-image: url("./images/space-select-bg.svg");
+  background-image: url('./images/space-select-bg.svg');
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: contain;
@@ -17,7 +17,7 @@
   //border: solid 1px #d6d6d6;
   border-radius: 16px;
   width: 440px;
-  box-shadow:#8181815e 0px 0px 15px 0px;
+  box-shadow: #8181815e 0px 0px 15px 0px;
   background-color: white;
 
   & :global(.ant-menu) {
