--- a/src/pages/LandingPage/styles.module.less
+++ b/src/pages/LandingPage/styles.module.less
@@ -1,10 +1,10 @@
 .page {
   width: 100%;
-  height: calc(~"100vh - 64px");
+  height: calc(~'100vh - 64px');
   display: flex;
   //justify-content: center;
   align-items: center;
-  background-image: url("./images/landing-shape.svg");
+  background-image: url('./images/landing-shape.svg');
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: contain;
@@ -21,5 +21,5 @@
 
 .subTitle {
   margin-top: 36px;
-  max-width: 340px
+  max-width: 340px;
 }
