--- a/src/pages/LoginPage/styles.module.less
+++ b/src/pages/LoginPage/styles.module.less
@@ -4,7 +4,7 @@
   padding: 28px;
   margin-bottom: 100px;
   margin: auto;
-  box-shadow:#8181815e 0px 0px 15px 0px;
+  box-shadow: #8181815e 0px 0px 15px 0px;
   background-color: white;
   text-align: center;
 }
@@ -15,7 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-image: url("./images/green-bg-1.svg");
+  background-image: url('./images/green-bg-1.svg');
   background-repeat: no-repeat;
   background-position: bottom center;
   background-size: contain;
